feat(ui): rewrite Swing UI without .form files and fix DAO addTask ID handling